objects/Talend_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Change_Request_Endpoint__c</fullName>
        <label>Change Request Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Update_Endpoint__c</fullName>
        <label>Sales Order Update Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sanbox_Change_Request_Endpoint__c</fullName>
        <label>Sanbox Change Request Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sanbox_Sales_Order_Update_Endpoint__c</fullName>
        <label>Sanbox Sales Order Update Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sandbox_Password__c</fullName>
        <label>Sandbox Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Send_To_Account_Endpoint__c</fullName>
        <label>Sandbox Send to Account Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sandbox_User_Name__c</fullName>
        <label>Sandbox User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Account_Endpoint__c</fullName>
        <label>Send to Account Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Talend Setting</label>
</CustomObject>